src/test/deca/syntax/invalid/created/int-error.ass
; start main program
; Main program
	LOAD #1000000000, R2
	FLOAT R2, R2
	STORE R2, 3(GB)
	LOAD #1000000000, R2
	FLOAT R2, R2
	STORE R2, 4(GB)
	LOAD 3(GB), R2
	TSTO #2
	BOV pile_pleine
	PUSH R2
	LOAD 4(GB), R2
	LOAD R2, R0
	POP R2
	MUL R0, R2
	BOV Overflow_error
	STORE R2, 5(GB)
; Beginning of main instructions:
	HALT
pile_pleine:
	WSTR "Error: pile pleine"
	WNL
	ERROR
Overflow_error:
	WSTR "Error: Overflow during arithmetic operation"
	WNL
	ERROR
division_zero:
	WSTR "Error: Division by zero"
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
; end main program
